sample/retrieveUnpackaged/objects/WaterMAP_Submission__c.object
<CustomObject>
    <description>xxxx</description>
    <fields>
        <fullName>Action_Plan_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action Plan Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF(NOT(ISPICKVAL(Status__c, &apos;Cancelled&apos;)) &amp;&amp;  NOT(ISPICKVAL(Status__c, &apos;Review Completed&apos;)) &amp;&amp;  NOT(ISPICKVAL(Status__c, &apos;Not Required&apos;)), &apos;Y&apos;, &apos;N&apos;)</formula>
        <label>Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approvable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Apex to allow it to approve</description>
        <label>Approvable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Warning_Image__c</fullName>
        <formula>IMAGE(&apos;https://southeastwater--c.ap1.content.force.com/servlet/servlet.ImageServer?id=015900000002Zda&amp;oid=00DO00000005FOW&amp;lastMod=1308717644000&apos;, &apos;Approve only using the approval button&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Warning Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WaterMAP_Submissions_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authorised_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorised By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>WaterMAP Submissions (Authorised By)</relationshipLabel>
        <relationshipName>WaterMAP_Submissions_Authorised_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Site_Info_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company &amp; Site Info Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cover_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cover Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Watermap__r.Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>WaterMAP Submissions</relationshipLabel>
        <relationshipName>WaterMAP_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HIDDEN_Approval_Email_Message__c</fullName>
        <label>(Hidden) Approval Email Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HIDDEN_Send_Approval_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>(Hidden) Send Approval Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_am_The_Approver__c</fullName>
        <description>Used in filter list criteria</description>
        <formula>IF(Approver__c = $User.Id, &apos;Y&apos;, &apos;N&apos;)</formula>
        <label>I&apos;m The Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_m_The_Customer_Owner__c</fullName>
        <formula>IF( Customer__r.OwnerId ==  $User.Id, &apos;Y&apos;, &apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I&apos;m The Customer Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicators_Targets_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indicators &amp; Targets Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Current_WaterMAP_Year__c</fullName>
        <description>Indicates in the Year of the WaterMAP Submission is the same as the current Year (define by the Custom Setting: WaterMAPSettings.Current_Period</description>
        <formula>if(Text(Year__c) == $Setup.WaterMAPSettings__c.Current_Period__c, &apos;Y&apos;, &apos;N&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current WaterMAP Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_waterMAP_PDF_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>waterMAP PDF Generated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunities_to_Save_Water_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunities to Save Water Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prepared_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prepared By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>WaterMAP Submissions</relationshipLabel>
        <relationshipName>WaterMAP_Submissions_Preparer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Ref__c</fullName>
        <formula>Watermap__r.Property_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rolled_Over_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rolled Over Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>S2_Sewage_Disposal_Volume__c</fullName>
        <label>Previous Year Sewage Disposal Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S2_Trade_Waste_Volume__c</fullName>
        <label>Previous Year Trade Waste Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S2_Water_Consumption__c</fullName>
        <label>Previous Year Water Consumption (KL/yr)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <formula>Watermap__r.Site_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved by SEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_Datetime__c</fullName>
        <label>Submitted Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Universal_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Universal Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WaterMAP_Customer_Id__c</fullName>
        <formula>Watermap__r.Customer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WaterMAP Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Water_Consumption_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Water Consumption Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Watermap__c</fullName>
        <label>Watermap</label>
        <referenceTo>WaterMAP__c</referenceTo>
        <relationshipLabel>WaterMAP Submissions</relationshipLabel>
        <relationshipName>WaterMAP_Submissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2015/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014/15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013/14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012/13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011/12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010/11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009/10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008/09</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>WaterMAP Submission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Year__c</columns>
        <columns>Watermap__c</columns>
        <columns>Status__c</columns>
        <columns>Property_Ref__c</columns>
        <columns>Site_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Submissions</label>
    </listViews>
    <listViews>
        <fullName>All_Cancelled_Submissions_for_This_Year</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Year__c</columns>
        <columns>Watermap__c</columns>
        <columns>Status__c</columns>
        <columns>Property_Ref__c</columns>
        <columns>Site_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <filters>
            <field>Is_Current_WaterMAP_Year__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <label>All Cancelled Submissions for This Year</label>
    </listViews>
    <listViews>
        <fullName>All_Completed_Submissions_for_This_Year</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Year__c</columns>
        <columns>Watermap__c</columns>
        <columns>Status__c</columns>
        <columns>Property_Ref__c</columns>
        <columns>Site_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Review Completed</value>
        </filters>
        <filters>
            <field>Is_Current_WaterMAP_Year__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <label>All Completed Submissions for This Year</label>
    </listViews>
    <listViews>
        <fullName>All_In_Progress_Submissions</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Year__c</columns>
        <columns>Watermap__c</columns>
        <columns>Status__c</columns>
        <columns>Property_Ref__c</columns>
        <columns>Site_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>All Submissions In Progress</label>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Submissions_for_This_Year</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Year__c</columns>
        <columns>Watermap__c</columns>
        <columns>Status__c</columns>
        <columns>Property_Ref__c</columns>
        <columns>Site_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Cancelled,Not Required</value>
        </filters>
        <filters>
            <field>Is_Current_WaterMAP_Year__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <label>All Inactive Submissions for This Year</label>
    </listViews>
    <listViews>
        <fullName>All_Submissions_Approved_by_SEW</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Year__c</columns>
        <columns>Watermap__c</columns>
        <columns>Status__c</columns>
        <columns>Property_Ref__c</columns>
        <columns>Site_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved by SEW</value>
        </filters>
        <label>All Submissions Approved by SEW</label>
    </listViews>
    <listViews>
        <fullName>All_Submissions_Awaiting_Approval</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Year__c</columns>
        <columns>Watermap__c</columns>
        <columns>Status__c</columns>
        <columns>Property_Ref__c</columns>
        <columns>Site_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval</value>
        </filters>
        <label>All Submissions Awaiting Approval</label>
    </listViews>
    <listViews>
        <fullName>All_Submissions_Ready_for_Review</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Year__c</columns>
        <columns>Watermap__c</columns>
        <columns>Status__c</columns>
        <columns>Property_Ref__c</columns>
        <columns>Site_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready for Review</value>
        </filters>
        <label>All Submissions Ready for Review</label>
    </listViews>
    <listViews>
        <fullName>All_Submissions_for_This_Year</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Year__c</columns>
        <columns>Watermap__c</columns>
        <columns>Status__c</columns>
        <columns>Property_Ref__c</columns>
        <columns>Site_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Current_WaterMAP_Year__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <label>All Submissions for This Year</label>
    </listViews>
    <listViews>
        <fullName>My_Submissions_Approved_by_SEW</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Year__c</columns>
        <columns>Watermap__c</columns>
        <columns>Status__c</columns>
        <columns>Property_Ref__c</columns>
        <columns>Site_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>I_m_The_Customer_Owner__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved by SEW</value>
        </filters>
        <label>My Submissions Approved by SEW</label>
    </listViews>
    <listViews>
        <fullName>My_Submissions_Awaiting_Approval</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Year__c</columns>
        <columns>Watermap__c</columns>
        <columns>Status__c</columns>
        <columns>Property_Ref__c</columns>
        <columns>Site_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>I_m_The_Customer_Owner__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted for Approval</value>
        </filters>
        <label>My Submissions Awaiting Approval</label>
    </listViews>
    <listViews>
        <fullName>My_Submissions_Ready_for_Review</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Year__c</columns>
        <columns>Watermap__c</columns>
        <columns>Status__c</columns>
        <columns>Property_Ref__c</columns>
        <columns>Site_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>I_m_The_Customer_Owner__c</field>
            <operation>equals</operation>
            <value>Y</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Ready for Review</value>
        </filters>
        <label>My Submissions Ready for Review</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WaterMAP Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Prevent_Users_from_Approving_Via_Status</fullName>
        <active>true</active>
        <description>Please use the approve button to approve the waterMAP Submission</description>
        <errorConditionFormula>NOT(Approvable__c) &amp;&amp; ISPICKVAL(Status__c, &apos;Approved by SEW&apos;)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Please use the approve button to approve the waterMAP Submission</errorMessage>
    </validationRules>
</CustomObject>